--- a/random math bits.tex
+++ b/random math bits.tex
@@ -290,10 +290,12 @@ Let's see what happens if $\det(\lambda_j^s)=0$. In that case, there's a nonzero
 0 & * & *\\
  & \ddots & *\\
  &  & 1
-\end{array}\right]$. Therefore $\alpha=\sum \alpha_i e_i,\dots,\zeta=\sum \zeta_i e_i$ satisfy that $\alpha^2-\alpha,\dots,\zeta^2-\zeta$ are nilpotent. So $\alpha^2=\alpha,\dots,\zeta^2=\zeta$ are idempotents!!! Moreover, they are clearly a basis of $E$. Moreover, $\alpha\beta,\dots,\alpha\zeta,\dots$ are nilpotents, so zero. So in fact, as an algebra, $E$ is isomorphic to a product of $\C$ with itself $s$ times!!!!!
+\end{array}\right]$. Therefore $\alpha=\sum \alpha_i e_i,\dots,\zeta=\sum \zeta_i e_i$ satisfy that $\alpha^2-\alpha,\dots,\zeta^2-\zeta$ are nilpotent. So $\alpha^2=\alpha,\dots,\zeta^2=\zeta$ are idempotents!!! Moreover, they are clearly a basis of $E$. Moreover, $\alpha\beta,\dots,\alpha\zeta,\dots$ are nilpotents, so zero. So in fact, as an algebra, $E$ is isomorphic to a product of $\C$ with itself $s$ times!!!!!\\
+Finally, note that $\alpha,\dots,\zeta$ are a simultaneous basis of eigenvectors for all multiplication maps $x\mapsto rx$, $r\in E$. 
 \\\\
 
 %To see the Killing form is nondegenerate in the case $E=Z(\CG)$, see https://math.stackexchange.com/questions/4631341/reference-for-an-english-translation-of-a-proof-of-frobenius-on-the-origins-of-r
+%Frobenius starts from this and then goes to develop character theory. the book "Pioneers of Representation Theory" has a good account. The article "Representations of finite groups: A hundred years" does too, and also "The Mathematics of Frobenius in Context"
 
 
 \newpage
